syntax = "proto3";

option java_package = "com.ljt.study.grpc";
option java_outer_classname = "RouteGuideProto";


service RouteGuideService {

  // 简单 RPC
  rpc GetFeature(Point) returns (Feature) {}
  // 服务器端流式 RPC
  rpc ListFeatures(Rectangle) returns (stream Feature) {}
  // 客户端流式 RPC
  rpc RecordRoute(stream Point) returns (RouteSummary) {}
  // 双向流式 RPC
  rpc RouteChat(stream RouteNote) returns (stream RouteNote) {}
}

message Point {
  int32 latitude = 1;
  int32 longitude = 2;
}

message Rectangle {
  Point lo = 1;
  Point hi = 2;
}

message Feature {
  string name = 1;
  Point location = 2;
}

message FeatureDatabase {
  repeated Feature feature = 1;
}

message RouteNote {
  Point location = 1;
  string message = 2;
}

message RouteSummary {
  int32 point_count = 1;
  int32 feature_count = 2;
  int32 distance = 3;
  int32 elapsed_time = 4;
}
